<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:id="@+id/layout_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="36sp"
            android:padding="36sp"
            />

        <TextView
            android:id="@+id/tv_welcome_namaMhs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ambrizal"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_aplikasi_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aplikasi_hint"
            android:textAlignment="center"
            android:layout_marginBottom="32sp"/>

        <Button
            android:id="@+id/btn_hitungGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_hitung_text" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>